# DocSentry-_-Keepin-It-Real

./: .env.example  .gitignore  BUILD_LOG.md  DEPLOY.md  DOCUMENTATION.md  DocSentry_Documentation.docx  Dockerfile  README.md  check_deps.py  check_setup.py  cli.py  config.py  pipeline.py  pyproject.toml  render.yaml  requirements.txt  test_doc_linker_result.txt
.github/workflows/: ci.yml
agents/: alerter.py  diff_analyzer.py  divergence.py  doc_linker.py
core/: git_ops.py  parser.py  vector_store.py
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  api.js  styles.css
deploy/github-action/: README.md  docsentry.yml
deploy/huggingface/: README.md  push.sh
docsentry/: __init__.py  cli.py  config.py  dashboard_static.py  history.py  main.py  pipeline.py
docsentry-github/: BUILD_LOG.md  Dockerfile  README.md  check_deps.py  check_setup.py  config.py  main.py  requirements.txt  test_divergence_result.txt
docsentry-github/agents/: auto_fixer.py  diff_analyzer.py  divergence.py  doc_linker.py  verifier.py
docsentry-github/core/: db.py  git_ops.py  parser.py  vector_store.py
docsentry-github/dashboard/: package.json
docsentry-github/tests/: test_diff_analyzer.py  test_divergence.py  test_doc_linker.py
docsentry/agents/: alerter.py  auto_fixer.py  diff_analyzer.py  divergence.py  doc_linker.py  review.py  verifier.py
tests/: conftest.py  test_alerter.py  test_api.py  test_auto_fixer.py  test_cli.py  test_config.py  test_dashboard_static.py  test_db.py  test_diff_analyzer.py  test_divergence.py  test_doc_linker.py  test_git_ops.py  test_history.py  test_llm_client.py  test_parser.py  test_pipeline.py  test_retrieval.py  test_review.py
(+15 files in other folders)
